9. Do not wrap content line too early in asset info area (keep issuer name etc. on single line)

--- a/app/styles/trader/info.less
+++ b/app/styles/trader/info.less
@@ -66,6 +66,9 @@ trader-info {
             min-height: 23px;
             font-size:16px;
             color: @white07;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
           }
           .title {
             color: @white;
